--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- ei vielä käännetty -->
+
+    <plurals name="hour">
+        <item quantity="other">%1$d hours</item>
+        <item quantity="one">%1$d hour</item>
+     </plurals>
+     <plurals name="minute">
+        <item quantity="other">%1$d minutes</item>
+        <item quantity="one">%1$d minute</item>
+     </plurals>
+     <plurals name="second">
+        <item quantity="other">%1$d seconds</item>
+        <item quantity="one">%1$d second</item>
+     </plurals>
+
+     <!-- ei vielä käännetty -->
+     
     <plurals name="mins_ago">
         <item quantity="other">%1$d minuuttia sitten</item>
         <item quantity="zero">%1$d minuuttia sitten</item>
