--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- ei vielä käännetty -->
+    <!-- miui 10 valmis -->
 
     <plurals name="hour">
-        <item quantity="other">%1$d hours</item>
-        <item quantity="one">%1$d hour</item>
+        <item quantity="other">%1$d tuntia</item>
+        <item quantity="one">%1$d tunti</item>
      </plurals>
      <plurals name="minute">
-        <item quantity="other">%1$d minutes</item>
-        <item quantity="one">%1$d minute</item>
+        <item quantity="other">%1$d minuuttia</item>
+        <item quantity="one">%1$d minuutti</item>
      </plurals>
      <plurals name="second">
-        <item quantity="other">%1$d seconds</item>
-        <item quantity="one">%1$d second</item>
+        <item quantity="other">%1$d sekuntia</item>
+        <item quantity="one">%1$d sekunti</item>
      </plurals>
 
-     <!-- ei vielä käännetty -->
+     <!-- miui 10 valmis -->
      
     <plurals name="mins_ago">
         <item quantity="other">%1$d minuuttia sitten</item>
