--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/plurals.xml
@@ -1,99 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- ei vielä käännetty -->
+    <!-- miui 10 valmis -->
     <plurals name="incorrect_pincode_remaining_attempts">
-        <item quantity="other">Incorrect PIN code, %d attempts remaining</item>
-        <item quantity="one">Incorrect PIN code, %d attempt remaining</item>
+        <item quantity="other">Virheellinen PIN-koodi, %d yritystä jäljellä</item>
+        <item quantity="one">Virheellinen PIN-koodi, %d yritys jäljellä</item>
      </plurals>
      <plurals name="incorrect_pukcode_remaining_attempts">
-        <item quantity="other">Incorrect PUK code, %d attempts remaining</item>
-        <item quantity="one">Incorrect PUK code, %d attempt remaining</item>
+        <item quantity="other">Virheellinen PUK-koodi, %d yritystä jäljellä</item>
+        <item quantity="one">Virheellinen PUK-koodi, %d yritys jäljellä</item>
      </plurals>
      <plurals name="keyguard_charging_info_charging_full_need_hour_time__text">
-        <item quantity="other">About %d hours until full</item>
-        <item quantity="one">About %d hour until full</item>
+        <item quantity="other">Noin %d tuntia kunnes täynnä</item>
+        <item quantity="one">Noin %d tunti kunnes täynnä</item>
      </plurals>
      <plurals name="keyguard_charging_info_charging_full_need_min_time__text">
-        <item quantity="other">About %d minutes until full​</item>
-        <item quantity="one">About %d minute until full​</item>
+        <item quantity="other">Noin %d minuuttia kunnes täynnä</item>
+        <item quantity="one">Noin %d minuutti kunnes täynnä</item>
      </plurals>
      <plurals name="keyguard_charging_info_charging_full_need_time__text">
-        <item quantity="other">About %1$d h %2$d m until full</item>
-        <item quantity="one">About %1$d h %2$d m until full</item>
+        <item quantity="other">Noin %1$d t %2$d m kunnes täynnä</item>
+        <item quantity="one">Noin %1$d t %2$d m kunnes täynnä</item>
      </plurals>
      <plurals name="keyguard_charging_info_could_use_hour_time_text">
-        <item quantity="other">About %d hours left</item>
-        <item quantity="one">About %d hour left</item>
+        <item quantity="other">Noin %d tuntia jäljellä</item>
+        <item quantity="one">Noin %d tunti jäljellä</item>
      </plurals>
      <plurals name="keyguard_charging_info_could_use_min_time_text">
-        <item quantity="other">About %d minutes left</item>
-        <item quantity="one">About %d minute left</item>
+        <item quantity="other">Noin %d minuuttia jäljellä</item>
+        <item quantity="one">Noin %d minuutti jäljellä</item>
      </plurals>
      <plurals name="keyguard_charging_info_could_use_time_text">
-        <item quantity="other">About %1$d h %2$d m left</item>
-        <item quantity="one">About %1$d h %2$d m left</item>
+        <item quantity="other">Noin %1$d t %2$d m jäljellä</item>
+        <item quantity="one">Noin %1$d t %2$d m jäljellä</item>
      </plurals>
      <plurals name="keyguard_charging_info_drained_hour_time_format">
-        <item quantity="other">%d hours</item>
-        <item quantity="one">%d hour</item>
+        <item quantity="other">%d tuntia</item>
+        <item quantity="one">%d tunti</item>
      </plurals>
      <plurals name="keyguard_charging_info_drained_min_time_format">
-        <item quantity="other">%d minutes</item>
-        <item quantity="one">%d minute</item>
+        <item quantity="other">%d minuuttia</item>
+        <item quantity="one">%d minuutti</item>
      </plurals>
      <plurals name="keyguard_charging_info_drained_time_format">
-        <item quantity="other">%1$d h %2$d m</item>
-        <item quantity="one">%1$d h %2$d m</item>
+        <item quantity="other">%1$d t %2$d m</item>
+        <item quantity="one">%1$d t %2$d m</item>
      </plurals>
      <plurals name="kg_password_default_pin_message">
-        <item quantity="other">Enter SIM PIN, you have %d remaining attempts.</item>
-        <item quantity="one">Enter SIM PIN, you have %d remaining attempt before you must contact your carrier to unlock your device.</item>
+        <item quantity="other">Anna SIM-kortin PIN-koodi, sinulla on %d yritystä jäljellä.</item>
+        <item quantity="one">Anna SIM-kortin PIN-koodi, sinulla on %d yritys jäljellä ennen kuin joudut ottamaan operaattoriisi yhteyttä laitteesi avaamista varten.</item>
      </plurals>
      <plurals name="kg_password_default_puk_message">
-        <item quantity="other">SIM is now disabled. Enter PUK code to continue. You have %d remaining attempts before SIM becomes permanently unusable. Contact carrier for details.</item>
-        <item quantity="one">SIM is now disabled. Enter PUK code to continue. You have %d remaining attempt before SIM becomes permanently unusable. Contact carrier for details.</item>
+        <item quantity="other">SIM-kortti on nyt poistettu käytöstä. Anna PUK-koodi jatkaaksesi. Sinulla on %d yritystä jäljellä, ennen kuin SIM-kortti muutetaan kokonaan käyttökelvottomaksi. Lisätietoja saat ottamalla yhteyttä operaattoriin.</item>
+        <item quantity="one">SIM-kortti on nyt poistettu käytöstä. Anna PUK-koodi jatkaaksesi. Sinulla on %d yritys jäljellä, ennen kuin SIM-kortti muutetaan kokonaan käyttökelvottomaksi. Lisätietoja saat ottamalla yhteyttä operaattoriin.</item>
      </plurals>
      <plurals name="kg_password_wrong_pin_code">
-        <item quantity="other">Incorrect SIM PIN code, you have %d remaining attempts.</item>
-        <item quantity="one">Incorrect SIM PIN code, you have %d remaining attempt before you must contact your carrier to unlock your device.</item>
+        <item quantity="other">Virheellinen SIM-kortin PIN-koodi, sinulla on %d yritystä jäljellä.</item>
+        <item quantity="one">Virheellinen SIM-kortin PIN-koodi, sinulla on %d yritys jäljellä ennen kuin joudut ottamaan operaattoriisi yhteyttä laitteesi avaamista varten.</item>
      </plurals>
      <plurals name="kg_password_wrong_puk_code">
-        <item quantity="other">Incorrect SIM PUK code, you have %d remaining attempts before SIM becomes permanently unusable.</item>
-        <item quantity="one">Incorrect SIM PUK code, you have %d remaining attempt before SIM becomes permanently unusable.</item>
+        <item quantity="other">Virheellinen SIM-kortin PUK-koodi, sinulla on %d yritystä jäljellä, ennen kuin SIM-kortti muuttuu pysyvästi käyttökelvottomaksi.</item>
+        <item quantity="one">Virheellinen SIM-kortin PUK-koodi, sinulla on %d yritys jäljellä, ennen kuin SIM-kortti muuttuu pysyvästi käyttökelvottomaksi.</item>
      </plurals>
      <plurals name="kg_prompt_reason_time_password">
-        <item quantity="other">"Device hasn't been unlocked for %d hours. Confirm password."</item>
-        <item quantity="one">"Device hasn't been unlocked for %d hour. Confirm password."</item>
+        <item quantity="other">Laitteen lukitusta ei ole avattu %d tuntiin. Vahvista salasana.</item>
+        <item quantity="one">Laitteen lukitusta ei ole avattu %d tuntiin. Vahvista salasana."</item>
      </plurals>
      <plurals name="kg_prompt_reason_time_pattern">
-        <item quantity="other">"Device hasn't been unlocked for %d hours. Confirm pattern."</item>
-        <item quantity="one">"Device hasn't been unlocked for %d hour. Confirm pattern."</item>
+        <item quantity="other">Laitteen lukitusta ei ole avattu %d tuntiin. Vahvista kuvio.</item>
+        <item quantity="one">Laitteen lukitusta ei ole avattu %d tuntiin. Vahvista kuvio.</item>
      </plurals>
      <plurals name="kg_prompt_reason_time_pin">
-        <item quantity="other">"Device hasn't been unlocked for %d hours. Confirm PIN."</item>
-        <item quantity="one">"Device hasn't been unlocked for %d hour. Confirm PIN."</item>
+        <item quantity="other">Laitteen lukitusta ei ole avattu %d tuntiin. Vahvista PIN-koodi.</item>
+        <item quantity="one">Laitteen lukitusta ei ole avattu %d tuntiin. Vahvista PIN-koodi.</item>
      </plurals>
      <plurals name="new_notifications_msg">
-        <item quantity="other">%d new notifications</item>
-        <item quantity="one">%d new notification</item>
+        <item quantity="other">%d uutta ilmoitusta</item>
+        <item quantity="one">%d uusi ilmoitus</item>
      </plurals>
      <plurals name="notification_channels_list_desc_2_and_others">
-        <item quantity="other">%1$s, %2$s, and %3$d others</item>
-        <item quantity="one">%1$s, %2$s, and %3$d other</item>
+        <item quantity="other">%1$s, %2$s, ja %3$d muuta</item>
+        <item quantity="one">%1$s, %2$s, ja %3$d muu</item>
      </plurals>
      <plurals name="notification_num_channels_desc">
-        <item quantity="other">1 out of %d notification categories from this app</item>
-        <item quantity="one">1 out of %d notification category from this app</item>
+        <item quantity="other">1/%d ilmoituskategoriasta tältä sovellukselta</item>
+        <item quantity="one">1/%d ilmoituskategoriasta tältä sovellukselta</item>
      </plurals>
      <plurals name="phone_locked_timeout_minutes_string">
-        <item quantity="other">Try again in %d minutes</item>
-        <item quantity="one">Try again in %d minute</item>
+        <item quantity="other">Yritä uudelleen %d minuutin kuluttua</item>
+        <item quantity="one">Yritä uudelleen %d minuutin kuluttua</item>
      </plurals>
      <plurals name="phone_locked_timeout_seconds_string">
-        <item quantity="other">Try again in %d seconds</item>
-        <item quantity="one">Try again in %d second</item>
+        <item quantity="other">Yritä uudelleen %d sekunnin kuluttua</item>
+        <item quantity="one">Yritä uudelleen %d sekunnin kuluttua</item>
      </plurals>
-     <!-- ei vielä käännetty -->
+     <!-- miui 10 valmis -->
     <plurals name="status_bar_accessibility_recent_apps">
         <item quantity="other">%d viimeaikaista sovellusta</item>
         <item quantity="one">%d viimeaikainen sovellus</item>
