--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/plurals.xml
@@ -135,6 +135,10 @@
         <item quantity="other">Sisällä %s ilmoitusta lisää.</item>
         <item quantity="one">Sisällä %s ilmoitus lisää.</item>
     </plurals>
+    <plurals name="notification_num_channels">
+        <item quantity="other">%d ilmoituskategoriaa</item>
+        <item quantity="one">%d ilmoituskategoria</item>
+    </plurals>
     <plurals name="fold_tips_title">
         <item quantity="other">%d ei tärkeää ilmoitusta</item>
         <item quantity="one">%d ei tärkeä ilmoitus</item>
