--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/plurals.xml
@@ -7,6 +7,14 @@
     <plurals name="days_ago">
         <item quantity="other">%1$d pv sitten</item>
     </plurals>
+    <plurals name="express_history_dialog_delete_message">
+        <item quantity="other">Poistetaanko %s kohdetta express-toimituksesta?</item>
+        <item quantity="one">Poistetaanko %s kohde express-toimituksesta?</item>
+    </plurals>
+    <plurals name="express_history_menu_select_num">
+        <item quantity="other">Valittuna %s kohdetta</item>
+        <item quantity="one">Valittuna %s kohde</item>
+    </plurals>
     <plurals name="hours_ago">
         <item quantity="other">%1$d t sitten</item>
     </plurals>
@@ -32,6 +40,10 @@
     <plurals name="payment_record_menu_select_num">
         <item quantity="other">Valittuna %s kohdetta</item>
         <item quantity="one">Valittuna %s kohde</item>
+    </plurals>
+    <plurals name="shopping_delete_num">
+        <item quantity="other">Poistetaanko %s valittua kohdetta?</item>
+        <item quantity="one">Poistetaanko %s valittu kohde?</item>
     </plurals>
     <plurals name="sms_day_suffix">
         <item quantity="other">%d päivän kuluttua</item>
@@ -65,17 +77,5 @@
     <plurals name="time_minute_ago">
         <item quantity="other">%d minuuttia sitten</item>
         <item quantity="one">%d minuutti sitten</item>
-    </plurals>
-    <plurals name="express_history_dialog_delete_message">
-        <item quantity="other">Poistetaanko %s kohdetta express-toimituksesta?</item>
-        <item quantity="one">Poistetaanko %s kohde express-toimituksesta?</item>
-    </plurals>
-    <plurals name="express_history_menu_select_num">
-        <item quantity="other">Valittuna %s kohdetta</item>
-        <item quantity="one">Valittuna %s kohde</item>
-    </plurals>
-    <plurals name="shopping_delete_num">
-        <item quantity="other">确认要删除所选的 %s 件商品吗？</item>
-        <item quantity="one">确认要删除所选的 %s 件商品吗？</item>
     </plurals>
 </resources>
