--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
@@ -120,12 +120,12 @@
         <item quantity="one">%d sovellusta ei ole käytetty pitkään aikaan, katso sovellukset.</item>
     </plurals>
     <plurals name="clean_long_msg_p1">
-        <item quantity="other">Puhdistetaan %1$d tiedostoa, %2$d valmiina</item>
-        <item quantity="one">Puhdistetaan %1$d tiedostoa, %2$d valmiina</item>
+        <item quantity="other">Puhdistetaan %1$d tiedostoa, (%2$d%%)</item>
+        <item quantity="one">Puhdistetaan %1$d tiedosto, (%2$d%%)</item>
     </plurals>
     <plurals name="clean_long_msg_p2">
-        <item quantity="other">%1$d%% kohdetta/sekunti aikaa jäljellä: %2$s</item>
-        <item quantity="one">%1$d%% kohdetta/sekunti aikaa jäljellä: %2$s</item>
+        <item quantity="other">%1$d kohdetta sekunnissa | Aikaa jäljellä: %2$s</item>
+        <item quantity="one">%1$d kohde sekunnissa | Aikaa jäljellä: %2$s</item>
     </plurals>
     <plurals name="wechat_video_time_p1">
         <item quantity="other">%1$s:</item>
