--- a/Finnish/main/Notes.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/Notes.apk/res/values-fi-rFI/arrays.xml
@@ -1,21 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- MIUI 10 valmis -->
-    <string-array name="first_guide_contents">
-        <item>Tervetuloa Muistiinpanoihin!</item>
-        <item>Tee muistiinpanoja</item>
-        <item>Voit käyttää muistiinpanoissasi tekstiä, kuvia ja ääninauhoitteita. Monipuolinen kirjasto tyylejä ja fontteja tekee yksinkertaisista tuherruksistasi näyttäviä.</item>
-        <item>Tarkistuslistat ja muistutukset auttavat sinua seuraavan kauppalistan tai matkan suunnittelemisessa.</item>
-        <item>Jaa muistiinpanoja</item>
-        <item>Voit luoda pitkän kuvakaappauksen Muistiinpanoissa automaattisesti, jonka voit sen jälkeen jakaa kavereidesi kanssa.</item>
-        <item>Luo &amp; vaihda kansioiden välillä</item>
-        <item>Paina alla olevaa nuolta luodaksesi uuden kansion tai vaihtaaksesi olemassa olevien kansioiden välillä.</item>
-     </string-array>
-     <string-array name="second_guide_contents">
-        <item>Äänimuistiinpanot</item>
-        <item>Liitä alkuperäinen ääninauhoitus muistiinpanoihin luodaksesi muistiinpanoja sisäänrakennetulla puheesta-tekstiksi moottorilla.</item>
-     </string-array>
-     <!-- MIUI 10 valmis -->
     <string-array name="attachment_chooser">
         <item>Kamera</item>
         <item>Galleria</item>
@@ -33,6 +17,16 @@
         <item>Osoite</item>
         <item>Muistilappu</item>
     </string-array>
+    <string-array name="first_guide_contents">
+        <item>Tervetuloa Muistioon!</item>
+        <item>Tee muistioita</item>
+        <item>Voit käyttää muistiossasi tekstiä, kuvia ja ääninauhoitteita. Monipuolinen kirjasto tyylejä ja fontteja tekee yksinkertaisista tuherruksistasi näyttäviä.</item>
+        <item>Tarkistuslistat ja muistutukset auttavat sinua seuraavan kauppalistan tai matkan suunnittelemisessa.</item>
+        <item>Jaa muistioita</item>
+        <item>Voit luoda pitkän kuvakaappauksen Muistiossa automaattisesti, jonka voit sen jälkeen jakaa kavereidesi kanssa.</item>
+        <item>Luo &amp; vaihda kansioiden välillä</item>
+        <item>Paina alla olevaa nuolta luodaksesi uuden kansion tai vaihtaaksesi olemassa olevien kansioiden välillä.</item>
+     </string-array>
     <string-array name="folder_operations">
         <item>Nimeä uudelleen</item>
         <item>Poista</item>
@@ -47,6 +41,10 @@
         <item>Luomispäivän mukaan</item>
         <item>Muokkauspäivämäärän mukaan</item>
     </string-array>
+    <string-array name="second_guide_contents">
+        <item>Äänimuistiot</item>
+        <item>Liitä alkuperäinen ääninauhoitus muistioihin luodaksesi muistioita sisäänrakennetulla puheesta-tekstiksi moottorilla.</item>
+     </string-array>
     <string-array name="welcome_notes_content">
         <item>"Tervetuloa Muistioon
 "</item>
