--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/arrays.xml
@@ -358,14 +358,23 @@
         <item>25 minuuttia</item>
         <item>30 minuuttia</item>
     </string-array>
+    <string-array name="time">
+        <item>%1$s</item>
+        <item>%2$s</item>
+        <item>%1$s%2$s</item>
+        <item>%3$s</item>
+        <item>%1$s%3$s</item>
+        <item>%2$s%3$s</item>
+        <item>%1$s%2$s%3$s</item>
+    </string-array>
     <string-array name="timer_duration">
         <item>Yhteensä %1$s</item>
         <item>Yhteensä %2$s</item>
-        <item>Yhteensä %1$s%2$s</item>
+        <item>Yhteensä %1$s %2$s</item>
         <item>Yhteensä %3$s</item>
-        <item>Yhteensä %1$s%3$s</item>
-        <item>Yhteensä %2$s%3$s</item>
-        <item>Yhteensä %1$s%2$s%3$s</item>
+        <item>Yhteensä %1$s %3$s</item>
+        <item>Yhteensä %2$s %3$s</item>
+        <item>Yhteensä %1$s %2$s %3$s</item>
     </string-array>
     <string-array name="volume_button_setting_entries">
         <item>Älä tee mitään</item>
