--- a/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/CleanMaster.apk/res/values-fi-rFI/plurals.xml
@@ -133,4 +133,8 @@
     <plurals name="wechat_video_time_p2">
         <item quantity="other">%1$s</item>
     </plurals>
+    <plurals name="whatsapp_delete_files">
+        <item quantity="other">Poistetaanko %1$d tiedostoa?</item>
+        <item quantity="one">Poistetaanko %1$d tiedosto?</item>
+    </plurals>
 </resources>
