--- a/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/SecurityCenter.apk/res/values-fi-rFI/plurals.xml
@@ -168,6 +168,22 @@ Jos otat mobiilidatan uudelleen käyttöön, operaattorisi saattaa veloittaa sin
         <item quantity="other">%s sovellusta ei ole suojattu</item>
         <item quantity="one">%s sovellus ei ole suojattu</item>
     </plurals>
+    <plurals name="menu_text_antivirus_2">
+        <item quantity="other">%d kohdetta</item>
+        <item quantity="one">%d kohde</item>
+    </plurals>
+    <plurals name="menu_text_antivirus_3">
+        <item quantity="other">%d päivää</item>
+        <item quantity="one">%d päivä</item>
+    </plurals>
+    <plurals name="menu_text_antispam_2">
+        <item quantity="other">%d kohdetta</item>
+        <item quantity="one">%d kohde</item>
+    </plurals>
+    <plurals name="menu_text_app_manager_2">
+        <item quantity="other">%d sovellusta</item>
+        <item quantity="one">%d sovellus</item>
+    </plurals>
     <plurals name="system_check_content">
         <item quantity="other">%1$d turvallista kohdetta</item>
         <item quantity="one">%1$d turvallinen kohde</item>
