--- a/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/arrays.xml
+++ b/Finnish/main/SoundRecorder.apk/res/values-fi-rFI/arrays.xml
@@ -41,4 +41,9 @@
         <item>MP3, ~100 kbit/s, ~45 Mt/t</item>
         <item>MP3, ~75 kbit/s, ~32 Mt/t</item>
     </string-array>
+    <string-array name="record_format_entries">
+        <item>AAC</item>
+        <item>MP3</item>
+        <item>WAV</item>
+    </string-array>
 </resources>
