--- a/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
+++ b/Finnish/main/ThemeManager.apk/res/values-fi-rFI/plurals.xml
@@ -8,4 +8,8 @@
         <item quantity="other">Päivityksiä saatavilla %1$d teemaa varten</item>
         <item quantity="one">Päivitys saatavilla %1$d teemaa varten</item>
     </plurals>
+    <plurals name="wallpaper_staggered_item_text">
+        <item quantity="other">%1$s | %2$d kuvaa</item>
+        <item quantity="one">%1$s | %2$d kuva</item>
+    </plurals>
 </resources>
